<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/custom_ui_title"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/title_text_size"
        android:fontFamily="sans-serif-thin"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/holder_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout">

            <EditText
                android:id="@+id/holder_edit_text"
                android:hint="@string/card_holder_hint"
                android:inputType="text"
                android:textSize="@dimen/base_text_size"
                android:fontFamily="sans-serif-condensed"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/number_text_input_layout"
            android:layout_below="@id/holder_text_input_layout"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout">

            <EditText
                android:id="@+id/number_edit_text"
                android:hint="@string/card_number_hint"
                android:inputType="number"
                android:textSize="@dimen/base_text_size"
                android:maxLength="20"
                android:fontFamily="sans-serif-condensed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/payment_method_icon"
            android:src="@drawable/visa"
            android:tint="@color/colorAccent"
            android:contentDescription="@string/visa"
            android:layout_marginTop="30dp"
            android:layout_alignBottom="@id/number_text_input_layout"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_width="50dp"
            android:layout_height="50dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/expiry_month_text_input_layout"
            android:layout_below="@id/number_text_input_layout"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout">

            <EditText
                android:id="@+id/expiry_month_edit_text"
                android:hint="@string/card_expiry_month_hint"
                android:inputType="number"
                android:maxLength="2"
                android:textSize="@dimen/base_text_size"
                android:fontFamily="sans-serif-condensed"
                android:layout_width="40dp"
                android:layout_height="wrap_content"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/expiry_date_delimiter"
            android:text="@string/date_delimiter"
            android:textSize="@dimen/base_text_size"
            android:layout_alignTop="@id/expiry_month_text_input_layout"
            android:layout_toRightOf="@id/expiry_month_text_input_layout"
            android:layout_toEndOf="@id/expiry_month_text_input_layout"
            android:layout_marginTop="25dp"
            android:fontFamily="sans-serif-condensed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/expiry_year_text_input_layout"
            android:layout_below="@id/number_text_input_layout"
            android:layout_toRightOf="@id/expiry_date_delimiter"
            android:layout_toEndOf="@id/expiry_date_delimiter"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout">

            <EditText
                android:id="@+id/expiry_year_edit_text"
                android:hint="@string/card_expiry_year_hint"
                android:inputType="number"
                android:maxLength="2"
                android:textSize="@dimen/base_text_size"
                android:fontFamily="sans-serif-condensed"
                android:layout_width="40dp"
                android:layout_height="wrap_content"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cvv_text_input_layout"
            android:layout_below="@id/number_text_input_layout"
            android:layout_toRightOf="@id/expiry_year_text_input_layout"
            android:layout_toEndOf="@id/expiry_year_text_input_layout"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout">

            <EditText
                android:id="@+id/cvv_edit_text"
                android:hint="@string/card_cvv_hint"
                android:inputType="number"
                android:maxLength="4"
                android:textSize="@dimen/base_text_size"
                android:fontFamily="sans-serif-condensed"
                android:layout_width="50dp"
                android:layout_height="wrap_content"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_pay_now"
            android:text="@string/button_pay_now"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed"
            android:background="@drawable/button_base_background"
            android:layout_below="@id/cvv_text_input_layout"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:paddingLeft="20dp"
            android:paddingTop="15dp"
            android:paddingRight="20dp"
            android:paddingBottom="15dp"
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</RelativeLayout>
